fix: wrap buttons in docs home page

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -17,6 +17,7 @@
 }
 
 .buttons {
+  flex-wrap: wrap;
   display: flex;
   align-items: center;
   justify-content: center;
